--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: draggable_widget
-description: A new Flutter package project.
-version: 1.0.0
-author:
-homepage:
+description: A flutter package which will help you to create a draggable widget that can be dragged around the screen.
+version: 1.0.1
+homepage: https://github.com/adar2378
+repository: https://github.com/adar2378/draggable_widget
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
